--- a/WebApp/src/app/cadastros/container/container.component.html
+++ b/WebApp/src/app/cadastros/container/container.component.html
@@ -48,7 +48,7 @@
 
 <div class="row footer-btn">
   <div class="button-row col s12"> 
-      <button mat-raised-button (click)="voltar()" >Voltar</button>    
+      <button mat-raised-button (click)="back()" >Voltar</button>    
       <button *ngIf="!update" mat-raised-button color="green" (click)="salvar()">Salvar</button>
       <button *ngIf="update" mat-raised-button color="green" (click)="atualizar()">Atualizar</button>
   </div> 
