--- a/WebApp/src/app/cadastros/container/container-list/container-list.component.html
+++ b/WebApp/src/app/cadastros/container/container-list/container-list.component.html
@@ -1,9 +1,8 @@
-<div class="row">
-  <button mat-icon-button class="direita"> 
+<div class="col s12 m3 tar">
+  <button mat-icon-button> 
     <mat-icon  (click)="callNew()">add_circle_outline</mat-icon>
   </button>
 </div>
-
 
 <div class="row">
   <div class="col s12 m12 l12">  
